# double_gesture_detect

./: .gitignore  CMakeLists.txt  README.md
apps/: camera_check.cpp  capture_samples.cpp  demo.cpp  evaluate.cpp  gui_report.cpp  headless.cpp  prepare_hagrid.cpp  train.cpp
cmake/toolchains/: rv1126-linux-gnueabihf.cmake
configs/: debug_landmarks.json  default.json  gemini335_six_face_calibration.json  rv1126_uvc.json
configs/kalibr/gemini335/: aprilgrid_6x6_a3.yaml  imu.yaml  recommended_values.yaml
data/processed/: README.md
data/raw/: README.md
docs/: AGENTS.md  architecture.md  current_main_contract.md  first-principles-working-mode.md  gemini335_kalibr.md  gemini335_six_face_calibration.md  hagrid_workflow.md  implementation_path.md  migration_parity_audit.md  production_readiness.md  project_structure.md  rv1126_deployment.md  using-superpowers.md
include/double_ok_gesture/: camera.hpp  capture_gate.hpp  capture_writer.hpp  config.hpp  demo_app.hpp  features.hpp  hand_detector.hpp  json.hpp  landmark_provider.hpp  live_ui.hpp  model_io.hpp  qt_dashboard.hpp  recognizer.hpp  report.hpp  runtime.hpp  runtime_pipeline.hpp  training.hpp
models/: README.md
scripts/: build_rv1126.sh  check_camera.sh  convert_hand_landmark_to_rknn.sh  evaluate_numpy_logreg.sh  gui_report.sh  mediapipe_landmark_server.py  package_rv1126.sh  prepare_hagrid.sh  run_demo.sh  run_rv1126.sh  test.sh  train_mlp.sh  train_numpy_logreg.sh
src/: camera.cpp  capture_gate.cpp  capture_writer.cpp  config.cpp  demo_app.cpp  features.cpp  hand_detector.cpp  json.cpp  landmark_provider.cpp  live_ui.cpp  model_io.cpp  qt_dashboard.cpp  recognizer.cpp  report.cpp  runtime.cpp  runtime_pipeline.cpp  training.cpp
src/double_ok_gesture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/cpp/: test_core.cpp
